--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@
         <h1>Discover hidden places in the world around you</h1>
         <a href="">Download Excursion (Coming soon!)</a>
     </header>
+    <p><video src="./resources/videos/excursion.mp4" autoplay></video></p>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="./resources/images/camp.jpg" alt=""></p>
+    <p><img src="./resources/images/phone.png" alt=""></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="">Download Excursion (Coming soon!)</a>
+    <p class="copyright">© Excursion</p>
 </body>
 </html>
